name:                pocket-vpn
version:             0.1.0
synopsis:            Multi-backend (zookeeper and sqlite) VPN Server using persistent-library
description:         Multi-backend (zookeeper and sqlite) VPN Server using persistent-library
license:             BSD3
license-file:        LICENSE
author:              Junji Hashimoto
maintainer:          junji.hashimoto@gmail.com
-- copyright:           
stability:           Experimental
category:            Network
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

bug-reports:         https://github.com/junjihashimoto/pocket-vpn/issues

extra-source-files:
  ChangeLog.md
  README.md
  cbits

source-repository head
  type:           git
  location:       https://github.com/junjihashimoto/pocket-vpn.git


library
  exposed-modules:     Network.VPN.Pocket.TUN
                     , Network.VPN.Pocket.SimpleServer
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4 && <5
                      ,conduit
                      ,conduit-extra
                      ,network
                      ,persistent-zookeeper >= 0.2 && < 0.3
                      ,persistent-sqlite >= 2.1 && < 3
                      ,persistent-template >= 2.1 && < 3
                      ,persistent >= 2.1 && < 3
                      ,optparse-applicative
                      ,bytestring
                      ,yaml
                      ,iproute
                      ,data-default
                      ,text
                      ,monad-control
                      ,transformers
                      ,aeson
                      ,unordered-containers
                      ,unix
                      ,binary
                      ,cereal
  c-sources:          cbits/linux.c
  include-dirs:       cbits
  includes:           vpn_tun.h

  -- hs-source-dirs:      
  ghc-options:       -Wall -O2
  default-language:    Haskell2010

executable pocket-vpn
  main-is: Main.hs            
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4 && <5
                      ,pocket-vpn
                      ,optparse-applicative
                      ,text
                      ,bytestring
                      ,cereal
                      ,network
  -- hs-source-dirs:      
  ghc-options:       -Wall -threaded -rtsopts -with-rtsopts=-N -O2
  default-language:    Haskell2010

-- test-suite test
--     type:              exitcode-stdio-1.0
--     main-is:           test.hs
--     hs-source-dirs:    tests,dist/build/autogen
--     ghc-options:       -Wall

--     build-depends: base
--                  , pocket-dns
--                  , transformers
--                  , hspec
--                  , hspec-contrib
--                  , hspec-server
--                  , test-sandbox
--                  , hspec-test-sandbox
--                  , cabal-test-bin
--                  , shakespeare
--                  , text
--     Default-Language:   Haskell2010
